@@ -4,6 +4,8 @@ Changelog
 0.2 (6-15-2012)
 ---------------
 
+* Implement timelayer.freeze_elapsed constraint, allowing the user to cap the total allowed
+  elapsed time of a layer to a given timedelta
 * Fix a bug in the guaranteed-sortedness of timelayers, by implementing timespan.__cmp___
 * Fix a bug in the collision detection of timelayer.add, by checking collisions against each
   timespan in the existing layer independently, instead of just checking against the layer's
